* Changelog
** Unreleased
- [[https://github.com/r0man/sablono/pull/152][#152]] Don't coerce nil/undefined input :value to be consistent with React.
- [[https://github.com/r0man/sablono/pull/149][#149]] Force lazy seq in interpret-seq to be realized.
- [[https://github.com/r0man/sablono/pull/146][#146]] Keep state and props of inputs synchronized.
- [[https://github.com/r0man/sablono/issues/140][#140]] Don't loose focus when switching from an uncontrolled to a
  controlled input.

** 0.7.7

- [[https://github.com/r0man/sablono/pull/133][#133]] Improve performance by using transducers.
- [[https://github.com/r0man/sablono/issues/141][#141]] Fix =^:inline= hint for elements without attributes.

** 0.7.6

- [[https://github.com/r0man/sablono/pull/135][#135]] Skip interpretation when using the =:inline= type hint.
- [[https://github.com/r0man/sablono/pull/134][#134]] Use the Tubax library to parse HTML in the tests and run them
  on Node.

** 0.7.5

- [[https://github.com/r0man/sablono/pull/132][#132]] Don’t join nil classes into classes string (#132)
- [[https://github.com/r0man/sablono/pull/131][#131]] Fix class compilation of keyword map lookup.

** 0.7.4

- [[https://github.com/r0man/sablono/pull/129][#129]] Fixed wrapped inputs with non-string values & checkboxes.

** 0.7.3

- [[https://github.com/r0man/sablono/pull/128][#128]] Update React to 15.2.1-1.
- [[https://github.com/r0man/sablono/pull/125][#125]] and [[https://github.com/r0man/sablono/pull/126][#126]] Update dependencies used for development.
- [[https://github.com/r0man/sablono/pull/127][#127]] Fixed skipped keys in controlled components on IE.
- [[https://github.com/r0man/sablono/pull/123][#123]] and [[https://github.com/r0man/sablono/pull/124][#124]] Don't wrap uncontrolled input elements.

** 0.7.2

- [[https://github.com/r0man/sablono/issues/119][#119]] Force lazy sequences to make dynamic binding work properly.

** 0.7.1
